syntax = "proto3";

package vesting.dex;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "vesting/dex/params.proto";
import "vesting/dex/vesting.proto";
import "vesting/dex/sent_vesting.proto";
import "vesting/dex/timedout_vesting.proto";

option go_package = "vesting/x/dex/types";

// Query defines the gRPC querier service.
service Query {
  
  // Parameters queries the parameters of the module.
  rpc Params (QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/vesting/dex/params";
  
  }
  
  // Queries a list of Vesting items.
  rpc Vesting    (QueryGetVestingRequest) returns (QueryGetVestingResponse) {
    option (google.api.http).get = "/vesting/dex/vesting/{id}";
  
  }
  rpc VestingAll (QueryAllVestingRequest) returns (QueryAllVestingResponse) {
    option (google.api.http).get = "/vesting/dex/vesting";
  
  }
  
  // Queries a list of SentVesting items.
  rpc SentVesting    (QueryGetSentVestingRequest) returns (QueryGetSentVestingResponse) {
    option (google.api.http).get = "/vesting/dex/sent_vesting/{id}";
  
  }
  rpc SentVestingAll (QueryAllSentVestingRequest) returns (QueryAllSentVestingResponse) {
    option (google.api.http).get = "/vesting/dex/sent_vesting";
  
  }
  
  // Queries a list of TimedoutVesting items.
  rpc TimedoutVesting    (QueryGetTimedoutVestingRequest) returns (QueryGetTimedoutVestingResponse) {
    option (google.api.http).get = "/vesting/dex/timedout_vesting/{id}";
  
  }
  rpc TimedoutVestingAll (QueryAllTimedoutVestingRequest) returns (QueryAllTimedoutVestingResponse) {
    option (google.api.http).get = "/vesting/dex/timedout_vesting";
  
  }
}
// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryGetVestingRequest {
  uint64 id = 1;
}

message QueryGetVestingResponse {
  Vesting Vesting = 1 [(gogoproto.nullable) = false];
}

message QueryAllVestingRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllVestingResponse {
  repeated Vesting                                Vesting    = 1 [(gogoproto.nullable) = false];
           cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryGetSentVestingRequest {
  uint64 id = 1;
}

message QueryGetSentVestingResponse {
  SentVesting SentVesting = 1 [(gogoproto.nullable) = false];
}

message QueryAllSentVestingRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllSentVestingResponse {
  repeated SentVesting                            SentVesting = 1 [(gogoproto.nullable) = false];
           cosmos.base.query.v1beta1.PageResponse pagination  = 2;
}

message QueryGetTimedoutVestingRequest {
  uint64 id = 1;
}

message QueryGetTimedoutVestingResponse {
  TimedoutVesting TimedoutVesting = 1 [(gogoproto.nullable) = false];
}

message QueryAllTimedoutVestingRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllTimedoutVestingResponse {
  repeated TimedoutVesting                        TimedoutVesting = 1 [(gogoproto.nullable) = false];
           cosmos.base.query.v1beta1.PageResponse pagination      = 2;
}

